[package]
name = "wisdom-advisor"
version = "2.2.0"
edition = "2021"
default-run = "wisdom"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name ="wisdomd"
path ="src/wisdomd/bin/main.rs"

[[bin]]
name ="wisdom"
path ="src/wisdom/bin/main.rs"

[dependencies]
clap = { path = "./crates/clap-3.2.17", features = ["cargo"] }
